[gd_scene load_steps=5 format=3 uid="uid://cvbtf74vw55xf"]

[ext_resource type="Script" path="res://Code/Item.gd" id="1_60oct"]
[ext_resource type="Texture2D" uid="uid://bi2ws0pcdf65q" path="res://Assets/Perks/IconsPerkRegen.png" id="2_nxki3"]
[ext_resource type="AudioStream" uid="uid://cv1x2qprieeqx" path="res://Assets/Sounds/Perk.wav" id="3_1j3w8"]

[sub_resource type="BoxShape3D" id="BoxShape3D_7pbf7"]

[node name="HealPerkItem" type="Node3D"]
script = ExtResource("1_60oct")
type = "heal"
description = "Just Heal, plz"

[node name="Sprite3D" type="Sprite3D" parent="."]
billboard = 1
texture = ExtResource("2_nxki3")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(2.07813, 0, 0, 0, 1.46166, 0, 0, 0, 2.25031, 0, 0, 0)
shape = SubResource("BoxShape3D_7pbf7")

[node name="ActionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_1j3w8")

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 1.1

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
